Bug 137417 - FILEOPEN: SMARTART: Incorrect size of shapes
Summary: FILEOPEN: SMARTART: Incorrect size of shapes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-12 10:46 UTC by Xisco Faulí
Modified: 2020-10-20 11:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.1 master (94.86 KB, image/png)
2020-10-12 10:46 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-10-12 10:46:43 UTC
Created attachment 166299 [details]
Comparison MSO 2010 and LibreOffice 7.1 master

Steps to reproduce:
1. Open attachment 123558 [details] from bug 98140

-> Smartart shapes in slide 2 and in the following slides are much bigger and  can't fit in the slide. See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: a9976a958b2857e308c6598532151878615bfd9f
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-10-12 10:48:02 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=0024c48b4822062995effed7db4f1281196384bb

author	Miklos Vajna <vmiklos@collabora.com>	2020-07-31 11:04:02 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2020-07-31 11:56:23 +0200
commit 0024c48b4822062995effed7db4f1281196384bb (patch)
tree d12ca396ee0fcb4a7d4c3b750188d44b89d53159
parent 22a77cb83a3769a8b43d80565282988a74214866 (diff)
oox smartart: consider rules when scaling in linear layout

Bisected with: bibisect-linux64-7.1

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2020-10-20 07:02:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c719db99166a7b4770855a9599ec65c70cd256c5

tdf#137417 oox smartart: avoid considering rules in vertical linear layouts

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2020-10-20 11:45:35 UTC
Verified in a local build where I downloaded the patch.
@Miklos, thanks for fixing this issue!!
Comment 4 Commit Notification 2020-10-20 11:46:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/8753e4e3ac000d325aedc9bb004c271f2e18e8c2

tdf#137417 oox smartart: avoid considering rules in vertical linear layouts

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.