tdf#137417 oox smartart: avoid considering rules in vertical linear layouts

Regression from commit 0024c48b4822062995effed7db4f1281196384bb (oox
smartart: consider rules when scaling in linear layout, 2020-07-31), the
problem is that I only tested horizontal layouts and this is not working
for vertical layouts.

Just disable the vertical case for now, to avoid unwanted side effects.

Change-Id: I31a894157996a2371b8d0ec482ee91dc4d5b053e